@@ -1,0 +1,80 @@
+Version = 1.0
+Pip = 1
+
+[Field = InputModel]
+short = i
+type = FN
+usage = The IMOD model file to analyze.
+tooltip = 
+manpage = The IMOD model file to analyze.  If this option is not entered, the
+first non-option argument will be used for the input file name.  One way or
+another, the option is required.
+
+[Field = OutputFile]
+short = o
+type = FN
+usage = The file to write the results to (default=stdout).
+tooltip = 
+manpage = A file to write the results into.  If this option is not entered and
+there is a second non-option argument, it will used as an output file name.
+If no output file is defined, results will be printed to standard out.  
+
+[Field = CentroidReference]
+short = c
+type = B
+usage = Reference all measurements to the centroid of the specified reference
+object
+tooltip = 
+manpage = 
+
+[Field = ContourReference]
+short = l
+type = I
+usage = The index of the contour to use when specifying a point in the
+reference object (default: 0).
+tooltip = 
+manpage = 
+
+[Field = Measure]
+short = m
+type = LI
+usage = The list of objects to measure.
+tooltip = 
+manpage = 
+
+[Field = PointReference]
+short = p
+type = I
+usage = Reference all measurements to this point in a contour in reference
+object.
+tooltip = 
+manpage = Reference all measurements to this point in specified contour in the
+specified reference object.
+
+[Field = ReferenceObject]
+short = r
+type = I
+usage = The object to use for referencing all distance measurements
+tooltip = 
+manpage = 
+
+[Field = verbose]
+short = v
+type = B
+usage = Print out information about the objects and models being processed
+tooltip = 
+manpage = 
+
+[Field = VeryVerbose]
+short = V
+type = B
+usage = Print out lots of debugging information
+tooltip = 
+manpage = 
+
+[Field = usage]
+short = h
+type = B
+usage = Print help output
+tooltip = 
+manpage = 
